--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
     <h1>ohmyfood</h1>
 
-    <section id="accueil">
+    <section>
         <div id="accueil_part_1">
             <div id="accueil_part_1_1">
                 <p>Paris, Bellville</p>
             </div>
             <div id="accueil_part_1_2">
-                <p class="titre">Réservez le menu qui vous convient</p>
+                <h2>Réservez le menu qui<br>vous convient</h2>
                 <p>Découvrez des restaurants d'exception,<br>séléctionnés par nos soins</p>
                 <button>Explorer nos restaurants</button>
             </div>
@@ -32,17 +32,62 @@
     </section>
 
 
-    <div id="accueil_part_2">
-        <p>Fonctionnement</p>
-        <div id="accueil_part_2_1">
-            <p>Choisissez un restaurant</p>
+    <section>
+        <div id="accueil_part_2">
+            <h2>Fonctionnement</h2>
+            <div id="accueil_part_2_1">
+                <p class="bulle">1</p>
+                <p id="txt_accueil_part_2_1">Choisissez un restaurant</p>
+            </div>
+            <div id="accueil_part_2_2">
+                <p class="bulle">2</p>
+                <p id="txt_accueil_part_2_2">Composez votre menu</p>
+            </div>
+            <div id="accueil_part_2_3">
+                <p class="bulle">3</p>
+                <p id="txt_accueil_part_2_3">Dégustez au restaurant</p>
+            </div>
         </div>
-        <div id="accueil_part_2_2">
-            <p>Composez votre menu</p>
+    </section>
+
+    <section>
+        <div id="accueil_part_3">
+            <h2>Restaurants</h2>
+            <div id="container_carte">
+                <div class="carte">
+                    <div class="img_carte" id="restaurants_img1"></div>                    
+                    <h4>La palette du goût</h4>
+                    <p>Ménilmontant</p>
+                    <button><i class="fa-thin fa-heart"></i></button>
+                </div>
+                <div class="carte">
+                    <div class="img_carte" id="restaurants_img2"></div>                    
+                    <h4>La note enchantée</h4>
+                    <p>Charbonne</p>
+                    <button><i class="fa-thin fa-heart"></i></button>
+                </div>
+                <div class="carte">
+                    <div class="img_carte" id="restaurants_img3"></div>                    
+                    <h4>À la française</h4>
+                    <p>Cité Rouge</p>
+                    <button><i class="fa-thin fa-heart"></i></button>
+                </div>
+                <div class="carte">
+                    <div class="img_carte" id="restaurants_img4"></div>                    
+                    <h4>Le délice des sens</h4>
+                    <p>Folie-Mélicourt</p>
+                    <button><i class="fa-thin fa-heart"></i></button>
+                </div>
+            </div>
         </div>
-        <div id="accueil_part_2_3">
-            <p>Dégustez au restaurant</p>
-        </div>
-    </div>
+    </section>
+    
+    <footer>
+        <p id="titre">ohmyfood</p>
+        <p>Proposer un restaurant</p>
+        <p>Devenir partenaire</p>
+        <p>Mentions légales</p>
+        <p>Contact</p>
+    </footer>
 </body>
 </html>
