--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div id="accueil_part_2_2">
                 <p class="bulle">2</p>
-                <p id="txt_accueil_part_2_2">Composez votre menu</p>
+                <p 1id="txt_accueil_part_2_2">Composez votre menu</p>
             </div>
             <div id="accueil_part_2_3">
                 <p class="bulle">3</p>
@@ -51,6 +51,7 @@
     </section>
 
     <section>
+        <h2></h2>
         <div id="accueil_part_3">
             <h2>Restaurants</h2>
             <div id="container_carte">
