--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
 </head>
 <body>
+    <div class="loader">
+        <div class="lds_ring"><div></div><div></div><div></div><div></div></div>
+    </div>
     <h1>ohmyfood</h1>
-
     <section>
         <div id="accueil_part_1">
             <div id="accueil_part_1_1">
-                <p>Paris, Bellville</p>
+                <p><i class="fa-solid fa-location-dot"></i> Paris, Bellville</p>
             </div>
             <div id="accueil_part_1_2">
                 <h2>Réservez le menu qui<br>vous convient</h2>
@@ -34,19 +36,25 @@
 
     <section>
         <div id="accueil_part_2">
-            <h2>Fonctionnement</h2>
-            <div id="accueil_part_2_1">
-                <p class="bulle">1</p>
-                <p id="txt_accueil_part_2_1">Choisissez un restaurant</p>
+            <div class="accueil_part_2_titre">
+                <h2>Fonctionnement</h2>
             </div>
-            <div id="accueil_part_2_2">
-                <p class="bulle">2</p>
-                <p 1id="txt_accueil_part_2_2">Composez votre menu</p>
+
+            <div class="accueil_part_2_cartes">
+                <div id="accueil_part_2_1">
+                    <p class="bulle">1</p>
+                    <p id="txt_accueil_part_2_1"><i class="fa-solid fa-mobile-screen"></i> Choisissez un restaurant</p>
+                </div>
+                <div id="accueil_part_2_2">
+                    <p class="bulle">2</p>
+                    <p 1id="txt_accueil_part_2_2"><i class="fa-solid fa-list"></i> Composez votre menu</p>
+                </div>
+                <div id="accueil_part_2_3">
+                    <p class="bulle">3</p>
+                    <p id="txt_accueil_part_2_3"><i class="fa-solid fa-hotel"></i> Dégustez au restaurant</p>
+                </div>
             </div>
-            <div id="accueil_part_2_3">
-                <p class="bulle">3</p>
-                <p id="txt_accueil_part_2_3">Dégustez au restaurant</p>
-            </div>
+
         </div>
     </section>
 
@@ -56,27 +64,35 @@
             <h2>Restaurants</h2>
             <div id="container_carte">
                 <div class="carte">
-                    <div class="img_carte" id="restaurants_img1"></div>                    
-                    <h4>La palette du goût</h4>
-                    <p>Ménilmontant</p>
+                    <a href="pages/la_palette_du_gout.html">
+                        <div class="img_carte" id="restaurants_img1"></div>                    
+                        <h4>La palette du goût</h4>
+                        <p>Ménilmontant</p>
+                    </a>
                     <button><i class="fa-thin fa-heart"></i></button>
                 </div>
                 <div class="carte">
-                    <div class="img_carte" id="restaurants_img2"></div>                    
-                    <h4>La note enchantée</h4>
-                    <p>Charbonne</p>
+                    <a href="pages/la_note_enchantee.html">
+                        <div class="img_carte" id="restaurants_img2"></div>                    
+                        <h4>La note enchantée</h4>
+                        <p>Charbonne</p>
+                    </a>
                     <button><i class="fa-thin fa-heart"></i></button>
                 </div>
                 <div class="carte">
-                    <div class="img_carte" id="restaurants_img3"></div>                    
-                    <h4>À la française</h4>
-                    <p>Cité Rouge</p>
+                    <a href="pages/france.html">
+                        <div class="img_carte" id="restaurants_img3"></div>                    
+                        <h4>À la française</h4>
+                        <p>Cité Rouge</p>
+                    </a>
                     <button><i class="fa-thin fa-heart"></i></button>
                 </div>
                 <div class="carte">
-                    <div class="img_carte" id="restaurants_img4"></div>                    
-                    <h4>Le délice des sens</h4>
-                    <p>Folie-Mélicourt</p>
+                    <a href="pages/le_delice_des_sens.html">
+                        <div class="img_carte" id="restaurants_img4"></div>                    
+                        <h4>Le délice des sens</h4>
+                        <p>Folie-Mélicourt</p>
+                    </a>
                     <button><i class="fa-thin fa-heart"></i></button>
                 </div>
             </div>
