--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="accueil_part_1_2">
                 <h2>Réservez le menu qui<br>vous convient</h2>
                 <p>Découvrez des restaurants d'exception,<br>séléctionnés par nos soins</p>
-                <button>Explorer nos restaurants</button>
+                <a href="#"><button>Explorer nos restaurants</button></a>
             </div>
         </div>
     </section>
@@ -65,6 +65,7 @@
             <div id="container_carte">
                 <div class="carte">
                     <a href="pages/la_palette_du_gout.html">
+                        <div class="nouveau">Nouveau</div>
                         <div class="img_carte" id="restaurants_img1"></div>                    
                         <h4>La palette du goût</h4>
                         <p>Ménilmontant</p>
@@ -73,6 +74,7 @@
                 </div>
                 <div class="carte">
                     <a href="pages/la_note_enchantee.html">
+                        <div class="nouveau">Nouveau</div>
                         <div class="img_carte" id="restaurants_img2"></div>                    
                         <h4>La note enchantée</h4>
                         <p>Charbonne</p>
@@ -101,10 +103,10 @@
     
     <footer>
         <p id="titre">ohmyfood</p>
-        <p>Proposer un restaurant</p>
-        <p>Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="#"><p><i class="fa-solid fa-utensils"></i>&nbsp;&nbsp;&nbsp;Proposer un restaurant</p></a>
+        <a href="#"><p><i class="fa-solid fa-handshake-angle"></i>&nbsp;&nbsp;Devenir partenaire</p></a>
+        <a href="#"><p>Mentions légales</p></a>
+        <a href="#"><p>Contact</p></a>
     </footer>
 </body>
 </html>
